<resources>
    <string name="app_name">Destinatrix</string>
    <string name="loginTextViewEmail">Email</string>
    <string name="loginTextViewPassword">Password</string>
    <string name="loginButtonTextLogin">Login</string>
    <string name="loginButtonLoginWithGoogle">Login with Google</string>
    <string name="loginDontHaveAnAccountText">Don\'t have an account?</string>
    <string name="logo_added">logo added</string>
    <string name="loginButtonRegister"><u>Register.</u></string>
    <string name="registerTextUserName">User Name</string>
    <string name="registerTextViewEmail">Email</string>
    <string name="registerTextViewPassword">Password</string>
    <string name="registerButtonTextSignUp">Sign Up</string>
    <string name="registerButtonLoginWithGoogle">Sign up with Google</string>
    <string name="registerAlreadyHaveAnAccountText">Already have an account? Sign in.</string>
    <string name="signUpFailMessage">Sign Up Unsuccessful, Please Try Again</string>
    <string name="places_api_key">AIzaSyDV2gApr2cLHIxf6txDbekIAGoNy2GcVd0</string>
    <string name="title_activity_destination_list">Destination List</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_destination_map_and_list">DestinationMapAndListActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="destinations">Destinations</string>
    <string name="map">Map</string>
    <string name="itinerary">ITINERARY</string>
</resources>
